src/compiletest/tlcell-03.stderr
error[E0308]: mismatched types
  --> $DIR/tlcell-03.rs:17:31
   |
17 |     let c1mutref = owner_b.rw(&*c1);    // Compile error
   |                               ^^^^ expected struct `MarkerB`, found struct `MarkerA`
   |
   = note: expected reference `&TLCell<MarkerB, _>`
              found reference `&TLCell<MarkerA, u32>`
